<resources>
    <string name="app_name">Innovate App Todo</string>
    <string name="button_add">Dodaj</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task_name_request">Podaj nazwę nowego zadania.</string>
    <string name="new_task_hint">Nazwa zadania</string>
    <string name="error_occurred">Wystąpił błąd</string>
    <string name="task_deleted">Usunięto zadanie</string>
    <string name="task_added">Dodano zadanie</string>
    <string name="deleting_title">Usuwanie</string>
    <string name="description">Opis</string>
    <string name="deadline">Deadline</string>
    <string name="title">Tytuł</string>
    <string name="Save">Zapisz</string>
    <string name="search">Wyszukaj...</string>
    <string name="create">Utwórz</string>
    <string name="filters">Filtry</string>
    <string name="priority">Pxriorytet</string>
    <string name="prior">Priorytetowe</string>
    <string name="non_prior">Niepriorytetowe</string>
    <string name="completed">Wykonane</string>
    <string name="not_completed">Niewykonane</string>
    <string name="apply">Zastosuj</string>
    <string name="sort_by">Sortowanie według</string>
    <string name="end_date">Data zakończenia</string>
    <string name="create_date">Data utworzenia</string>
    <string name="update_date">Data aktualizacji</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
</resources>