<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/list_item_background"
    android:backgroundTint="@color/colorPrimaryDark"
    android:gravity="center|left"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.YesNoDialog">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sort_by"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="230dp" />

    <RadioGroup
        android:id="@+id/sorting_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/title_sort"
            style="@style/round_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@drawable/ic_north_east"
            android:drawableTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/title" />

        <RadioButton
            android:id="@+id/complete_date_sort"
            style="@style/round_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/ic_north_east"
            android:drawableTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/deadline" />

        <RadioButton
            android:id="@+id/end_date_sort"
            style="@style/round_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/ic_north_east"
            android:drawableTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/end_date" />

        <RadioButton
            android:id="@+id/create_date_sort"
            style="@style/round_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/ic_north_east"
            android:drawableTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/create_date" />

        <RadioButton
            android:id="@+id/update_date_sort"
            style="@style/round_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/ic_north_east"
            android:drawableTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/update_date" />
    </RadioGroup>

    <Button
        android:id="@+id/apply_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:text="@string/apply" />

</LinearLayout>